# integration-hub

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0001_phase0_foundations.py  0002_add_audit_fields.py  0003_agent_credentials.py  0004_add_listings.py  0005_add_idempotency_keys.py  0006_outbox_audit_fields.py  0007_outbox_processing_fields.py  0008_deliveries.py  0009_outbox_leases.py  0010_delivery_retry_fields.py  0011_external_identities.py  0012_delivery_retry_schedule.py  0013_source_listing_mappings.py  0014_ingest_runs.py  0015_ingest_runs_adapter_version.py  0016_partner_destination_settings.py  0017_feed_snapshots.py  0018_geo_catalogs.py  0019_destination_geo_mappings.py  0020_destination_enum_map.py  0021_feed_snapshot_gzip.py  0022_audit_logs.py  0023_destination_catalog_import_runs.py  0024_destination_catalog_sets.py  0025_catalog_run_link_set.py
app/: main.py
app/adapters/: base.py  registry.py
app/canonical/: __init__.py  registry.py
app/connectors/: base.py  mock.py  registry.py
app/core/: config.py  crypto.py  db.py  ids.py  security.py  telemetry.py
app/destinations/: __init__.py  base.py  capabilities.py  connector_registry.py  mapping_base.py  mapping_registry.py  registry.py  sample_passthrough_connector.py
app/models/: __init__.py  agent.py  (+26 more)
ops/: import_catalog.py
tests/: conftest.py  fixtures_seed.py  test_e2e_flow.py  test_health.py  test_listings.py
worker/: celery_app.py  dispatcher.py  feed_dispatcher.py  publish.py  tasks.py  tasks_publish.py
(+97 files in other folders)
